# wgpu-template

./: Cargo.toml  README.md  flake.nix
src/: main.rs  settings.rs  settings.toml
src/graphics/: mod.rs  shader.wgsl  surface.rs
