[package]
name = "wgpu-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# window & graphics
winit = { version = "0.28" }
wgpu = "0.17"

# debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# settings file
serde = { version = "1.0", features = ["rc", "derive"] }
#ron = "0.8"
toml_edit = { version = "0.19", features = ["serde"] }
# settings file live reload (TODO:)
notify = "6.0"

tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }

directories = "5.0"
once_cell = "1.18"
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck"] }
rand = "0.8"

# texture loading
# image = "0.24"
